Added two test nodes, changed standard to c++14
 - Added the getting started test publisher and subscriber
 - Updated the package.xml with information and necessary build steps
 - Updated CMakeLists with necessary build steps
 - Updated .travis.yml
   + Removed the creator of industrial_ci from Travis CI notifications
   + Changed language to cpp instead of generic

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,9 @@ sudo: required
 dist: xenial
 services:
   - docker
-language: generic
+language: cpp
 compiler:
   - g++
-notifications:
-  email:
-    recipients:
-      - gm130s@gmail.com
 env:
   matrix:
     - ROS_DISTRO="kinetic"  ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu NOT_TEST_INSTALL=true
