--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   message_generation
   rtabmap_ros
+  openni_camera
+  openni_launch
 )
 
 ## System dependencies are found with CMake's conventions
