--- a/package.xml
+++ b/package.xml
@@ -44,10 +44,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>navigation</build_depend>
   <build_depend>rtabmap_ros</build_depend>
+  <build_depend>openni_camera</build_depend>
+  <build_depend>openni_launch</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>navigation</run_depend>
   <run_depend>rtabmap_ros</run_depend>
+  <run_depend>openni_camera</run_depend>
+  <run_depend>openni_launch</run_depend>
 
 
 
